# assistant

./: .gitignore  Cargo.toml  Makefile  README.md  README_CN.md  build.rs  default.toml  design.puml  process.md  rust-toolchain.toml
.github/workflows/: plantuml.yml
crates/client/: Cargo.toml  README.md
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/grpc-server/: Cargo.toml
crates/grpc-server/src/: lib.rs
crates/http-server/: Cargo.toml
crates/http-server/src/: lib.rs
crates/protos/: Cargo.toml  build.rs
crates/protos/proto/: service.proto
crates/protos/src/: assistant.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
models/: README.md
src/: lib.rs  main.rs  server.rs
src/client/: Cargo.toml  README.md
src/client/api/: Cargo.toml
src/client/api/src/: dialogue_model.rs  lib.rs  speech_to_text.rs  text_to_speech.rs
src/client/cli/: Cargo.toml
src/client/cli/src/: main.rs
src/client/gui/: Cargo.toml
src/client/gui/src/: main.rs
src/client/src/: lib.rs  main.rs
src/client/src/api/: dialogue_model.rs  mod.rs
src/client/src/ui/: dialogue.rs  mod.rs  settings.rs
src/client/web/: Cargo.toml
src/client/web/src/: main.rs
src/models/: README.md
src/plugins/: Cargo.toml  README.md
src/plugins/src/: config.rs  error.rs  http.rs  lib.rs
src/plugins/src/openai/: api.rs  auth.rs  mod.rs  models.rs
src/protocols/: api.rs  api_ttrpc.rs  mod.rs
src/protos/: Cargo.toml  build.rs
src/protos/src/: api.rs  lib.rs  mod.rs  model_ttrpc.rs
src/protos/src/grpc/: mod.rs  model.rs  mserver.rs
src/protos/src/ttrpc/: mod.rs  model.rs
src/service/: Cargo.toml
src/service/src/: chat_templates.toml  config.rs  default.toml  dialogue_model.rs  lib.rs  main.rs  manager.rs  runmodel.rs  server.rs  speech_to_text.rs  text_to_speech.rs
src/service/src/local/: manager.rs  mod.rs  wasm_runner.rs
src/service/src/modeldeal/: chat.rs  chat_voice.rs  dialogue_model.rs  mod.rs  speech_to_text.rs  text_to_speech.rs  voice_chat.rs
src/service/src/service/: grpcservice.rs  localservice.rs  mod.rs  streamservice.rs  ttrpcservice.rs
templates/: chat.html  config.html  index.html
wasme-ggml/: Cargo.toml  README.md
wasme-ggml/src/: main.rs
