[workspace]
members = ["src/service","src/protos","wasme-ggml","src/client","src/plugins"]

[workspace.dependencies]
reqwest = { version = "0.12", features = ["json"] }
cpal = "0.15"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rodio = "0.20"
tonic = "0.12.3"
ttrpc = "0.8.4"
tonic-build = "0.12.3"
prost-build = "0.12.3"
ttrpc-codegen = "0.5"
thiserror = "2.0"
prost = { version = "0.13" }
async-trait = "0.1.42"
protobuf = "3.1.0"
serde = { version = "1.0", features = ["derive"] }

