[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/protos",
    "crates/scheduler",
    "crates/http-server",
    "crates/grpc-server",
    "crates/config",
]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.7", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
tempfile = "3.10"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
grpc-server = { path = "crates/grpc-server" }
http-server = { path = "crates/http-server" }
scheduler = { path = "crates/scheduler" }
config = { path = "crates/config" }

[build-dependencies]
tonic-build = "0.11"



