[package]
name = "assistant-client"
version = "0.1.0"
edition = "2021"

[dependencies]
protos = { path = "../protos" }
tokio = { version = "1", features = ["full"] }
tonic = "0.12.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
tokio-tungstenite = "0.20.1"
futures-util = "0.3.28"
url = "2.5.0"