[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true } 
config = { path = "../config" }
futures = { workspace = true }
tokio-stream = "0.1"
tonic = { workspace = true }
protos = { path = "../protos" }