[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {workspace = true}
cpal = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
rodio = {workspace = true}
ttrpc =  {workspace = true}
protos = {path = "../protos"}


[build-dependencies]
prost-build  = "*"
ttrpc-codegen = "*"