[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
protos = {path = "../protos"}
thiserror = {workspace = true}
ttrpc = {workspace =true, features = ["async"]}
prost = {workspace = true}
tokio = {workspace = true}
async-trait = {workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}


log = "0.4.6"
simple-logging = "2.0.2"
toml = "0.8.19"
reqwest = { version = "0.12", features = ["json"] }