[package]
name = "assistant-service"
version = "0.1.0"
edition = "2021"

[dependencies]
protos = {path = "../protos"}
thiserror = {workspace = true}
prost = {workspace = true}
tokio = {workspace = true}
async-trait = {workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}


sfifo = {git = "https://github.com/jokemanfire/sfifo"}
log = "0.4.6"
simple-logging = "2.0.2"
toml = "0.8.19"
reqwest = { version = "0.12", features = ["json","multipart"] }
tonic = "0.12.3"
env_logger = "0.11.5"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
config = "0.13"
once_cell = "1.18.0"
protobuf = "3.7.0"
libc = "0.2"
assistant-plugins = {path = "../plugins", optional = true}

[features]
default = []
http_api = ["reqwest/json", "assistant-plugins/http_api"]
#wasm have some compile problem, so we don't use it
#wasmtime = "29.0"
#wasmtime-wasi = "29.0"
#wasmedge-sdk = {version = "0.13.5-newapi", features = ["wasi_nn","async"]}
#wasmedge-sys = "=0.19.0"